--- a/HotelBookingApp/MainWindow.xaml
+++ b/HotelBookingApp/MainWindow.xaml
@@ -11,7 +11,7 @@
         <Border CornerRadius="25" Margin="20,10,20,10" BorderBrush="Red" Background="White" Width="330">
             <StackPanel Orientation="Vertical">
                 <Label Content="Welcome" FontSize="25" HorizontalAlignment="Center" FontWeight="Bold" Margin="2,5,2,0" VerticalContentAlignment="Bottom"/>
-                <Label Content="Please Login to Proceed" FontSize="20" HorizontalContentAlignment="Center" FontWeight="Medium" Margin="2,0,2,10" FontStyle="Italic" VerticalContentAlignment="Top"/>
+                <Label Content="Please login to proceed" FontSize="20" HorizontalContentAlignment="Center"  Margin="2,0,2,10" VerticalContentAlignment="Top"/>
 
                 <Grid Margin="2" >
                     <Grid.ColumnDefinitions>
@@ -23,7 +23,7 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Label Grid.Row="0" Grid.Column="0" Margin="0,5" Content="User Id : " VerticalContentAlignment="Center"
+                    <Label Grid.Row="0" Grid.Column="0" Margin="0,5" Content="Username: " VerticalContentAlignment="Center"
 HorizontalContentAlignment="Right"/>
                     <TextBox Grid.Row="0" Grid.Column="1" x:Name="txtUserId" Margin="0,5" Width="150" VerticalContentAlignment="Center" Text="{Binding Username,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
 HorizontalContentAlignment="Left"/>
@@ -37,7 +37,7 @@ HorizontalContentAlignment="Left"/>
 
                 </Grid>
                 <Label Height="30" Width="210">
-                    <Hyperlink Foreground="Black" CommandParameter="{Binding ElementName=LoginWindow}" Command="{Binding OpenRegisterClick,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">Not a Member? Click here to Register</Hyperlink>
+                    <Hyperlink Foreground="Black" CommandParameter="{Binding ElementName=LoginWindow}" Command="{Binding OpenRegisterClick,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">Not a member? Click here to register</Hyperlink>
                 </Label>
             </StackPanel>
         </Border>
