--- a/HotelBookingApp/ViewHotelRooms.xaml
+++ b/HotelBookingApp/ViewHotelRooms.xaml
@@ -13,16 +13,16 @@
             <RowDefinition Height="80"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="35" Content="View Hotel Rooms" FontWeight="Bold"/>
+        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="35" Content="View hotelrooms" />
 
-        <Label Grid.Row="1" Content="Start Date :" FontWeight="Bold" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" FontSize="20" Width="120"/>
+        <Label Grid.Row="1" Content="Start date :" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" FontSize="20" Width="120"/>
         <DatePicker Grid.Row="1" HorizontalAlignment="Left" Margin="190,0,0,0" VerticalAlignment="Center" FontSize="20" Width="190" SelectedDate="{Binding SelectedStartDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         
-        <Label Grid.Row="1" Content="End Date :" FontWeight="Bold" HorizontalAlignment="Center" Margin="130,0,0,0" VerticalAlignment="Center" FontSize="20" Width="120"/>
+        <Label Grid.Row="1" Content="End date :" HorizontalAlignment="Center" Margin="130,0,0,0" VerticalAlignment="Center" FontSize="20" Width="120"/>
         <DatePicker Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,100,0" VerticalAlignment="Center" FontSize="20" Width="190" SelectedDate="{Binding SelectedEndDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Label Grid.Row="2" Content="Extra Service :" FontWeight="Bold" HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center" FontSize="20" Width="220"/>
-        <ComboBox SelectedItem="{Binding SelectedExtra, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Width="250" Height="60" FontSize="25" ItemsSource="{Binding Extras, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="ExtraDescription" SelectedValuePath="Id"/>
+        <Label Grid.Row="2" Content="Extra Service :" HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center" FontSize="20" Width="220"/>
+        <ComboBox SelectedItem="{Binding SelectedExtra, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Width="250" Height="40" FontSize="25" ItemsSource="{Binding Extras, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="ExtraDescription" SelectedValuePath="Id"/>
 
         <DataGrid SelectedItem="{Binding SelectedRoom,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding Rooms, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Margin="20" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" Name="dgHotelRooms">
             <DataGrid.Columns>
